--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,32 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_backend"
+
 [project]
 name = "gs-me"
 version = "0.1.0"
-description = "Add your description here"
+description = "A genome visualization tool"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+authors = [
+    { name = "Your Name", email = "your.email@example.com" }
+]
+license = { file = "LICENSE" }
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+requires-python = ">=3.6"
+
+[project.urls]
+Homepage = "https://github.com/yourusername/gs_me"
+Repository = "https://github.com/yourusername/gs_me.git"
+
+[project.scripts]
+gs-me = "gs_me.run:main"
+
+[tool.setuptools.packages.find]
+include = ["gs_me*"]
+
+[tool.setuptools.package-data]
+gs_me = ["genomespy/*"]
