--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,30 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_backend"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "gs-me"
 version = "0.1.0"
 description = "A genome visualization tool"
 readme = "README.md"
+requires-python = ">=3.9"
+license = {text = "MIT License"}
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    {name = "Dmitrii Utkin", email = "dutking@gmail.com"}
 ]
-license = { file = "LICENSE" }
 classifiers = [
+    "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-requires-python = ">=3.6"
-
-[project.urls]
-Homepage = "https://github.com/yourusername/gs_me"
-Repository = "https://github.com/yourusername/gs_me.git"
 
 [project.scripts]
 gs-me = "gs_me.run:main"
 
-[tool.setuptools.packages.find]
-include = ["gs_me*"]
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["gs_me"]
 
 [tool.setuptools.package-data]
 gs_me = ["genomespy/*"]
