--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gs-me"
-version = "0.1.7"
+version = "0.1.8"
 description = "A genome visualization tool"
 readme = "README.md"
 requires-python = ">=3.9"
-license = {text = "MIT License"}
-authors = [
-    {name = "Dmitrii Utkin", email = "dutking@gmail.com"}
-]
+license = { text = "MIT License" }
+authors = [{ name = "Dmitrii Utkin", email = "dutking@gmail.com" }]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
@@ -23,7 +21,7 @@ classifiers = [
 gs-me = "gs_me.run:main"
 
 [tool.setuptools]
-package-dir = {"" = "src"}
+package-dir = { "" = "src" }
 packages = ["gs_me"]
 
 [tool.setuptools.package-data]
